--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,9 +17,14 @@ spring:
     username: root
     password: asd1234
   
-#  h2:
-#    console:
-#      enabled: true
-#  output:
-#    ansi:
-#      enabled: always
+
+mybatis:
+  mapper-locations:
+  - classpath:mapper/**.xml
+  configuration:
+    map-underscore-to-camel-case: true # mysql <--> spring 간에 스네이크 케이스, 카멜케이스 자동 매핑 해준다
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+   
+logging:
+  level:
+    org.mybatis: DEBUG
