--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,12 +11,18 @@ spring:
     view:
       prefix: /WEB-INF/view/
       suffix: .jsp
+  servlet:
+    multipart:
+      max-file-size:
+        20MB
+      max-request-size:
+        20MB
   datasource:
     url: jdbc:mysql://localhost:3306/mybank?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: asd1234
-  
+
 
 mybatis:
   mapper-locations:
